force-app/main/default/objects/Project_Schdule_To__c/Project_Schdule_To__c.object-meta.xml
<CustomObject>
    <label>Project Schdule To</label>
    <nameField>
        <displayFormat>PS-{000000}</displayFormat>
        <label>Project Schdule To Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Schedules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>